--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/dn.css">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/pmedia.css">
 </head>
 <body>
     <div class="header">
@@ -66,7 +68,7 @@
         <div class="header_block1">
            <img class="header_block1_img" src="./img/The_Super_Mario_Bros 1.png" alt="The_Super_Mario_Bros_movie"> 
            <div class="header_block1_bl">
-                <p class="header_block1_bl_title">Introducing a new film</p>
+                <p class="header_block1_bl_title">Introducing a new movie! </p>
                 <p class="header_block1_bl_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisl nulla, pellentesque ut ornare ut, vulputate in dui. Fusce placerat elit lacus, ut iaculis dolor sollicitudin at. Sed imperdiet auctor tortor, eu venenatis odio consequat mollis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisl nulla, pellentesque ut ornare ut, vulputate in dui. Fusce placerat elit lacus, ut iaculis dolor sollicitudin at. Sed imperdiet auctor tortor, eu venenatis odio consequat mollis</p>
                 <button class="header_block1_bl_btn">Purchase</button>
            </div>
@@ -110,10 +112,85 @@
                     <rect width="34" height="32" fill="white"/>
                     </clipPath>
                     </defs>
-                    <p class="footer_block1_logo_p">CineWave</p>
                 </svg>
+                <p class="footer_block1_logo_p">CineWave</p>
             </div>
             <p class="footer_block1_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisl nulla, pellentesque ut ornare ut, vulputate in dui. Fusce placerat elit lacus, ut iaculis dolor sollicitudin at. Sed imperdiet auctor tortor, eu venenatis odio consequat mollis</p>
+        </div>
+    </footer>
+    <div class="pheader">
+        <header class="pheader_phead">
+            <div class="pheader_phead_forlogo">
+                <div class="pheader_phead_forlogo_logo">
+                    <svg width="34" height="32" viewBox="0 0 34 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_9_2)">
+                        <path d="M31.7078 14.023C31.313 14.023 30.903 14.1007 30.4889 14.2538L25.7462 16.0069C27.3609 14.5279 28.3665 12.4629 28.3665 10.18C28.3665 5.69454 24.4892 2.04529 19.7233 2.04529C15.5364 2.04529 12.0364 4.86204 11.2475 8.58766C10.1284 7.48591 8.55367 6.79754 6.81024 6.79754C3.42365 6.79754 0.668457 9.39066 0.668457 12.5782C0.668457 14.5673 1.74158 16.3249 3.37146 17.3653C3.2919 17.3949 3.21394 17.4293 3.14063 17.4737C2.76092 17.7038 2.53142 18.0997 2.53142 18.5247V26.7293C2.53142 28.2457 3.84215 29.4793 5.45329 29.4793H21.7892C23.4004 29.4793 24.7111 28.2457 24.7111 26.7293V23.5975C25.0292 23.8242 25.3742 24.0087 25.7192 24.1362L30.4892 25.8998C30.9031 26.0528 31.3131 26.1303 31.7078 26.1303C32.9592 26.1303 33.8673 25.3324 33.8673 24.233V15.9202C33.8672 14.8208 32.959 14.023 31.7078 14.023Z" fill="#D1D1D1"/>
+                        <path d="M32.7161 24.1913C32.7161 24.7862 32.0121 25.0125 31.1516 24.6945L26.3817 22.931C25.5212 22.613 24.8172 21.8658 24.8172 21.2712V18.7986C24.8172 18.2038 25.5212 17.4568 26.3817 17.1387L31.1516 15.3755C32.0121 15.0573 32.7161 15.2837 32.7161 15.8785V24.1913Z" fill="#454545"/>
+                        <path d="M19.9005 3.25366C15.8605 3.25366 12.5854 6.33616 12.5854 10.1384C12.5854 13.9405 15.8605 17.0235 19.9005 17.0235C23.9405 17.0235 27.2155 13.9407 27.2155 10.1384C27.2155 6.33604 23.9405 3.25366 19.9005 3.25366ZM17.672 9.12741C16.6637 8.62954 15.4837 7.81229 15.1636 7.51091C14.63 7.00866 14.9851 6.52879 15.5189 6.02654C16.0527 5.52416 16.5625 5.18991 17.0962 5.69216C17.4162 5.99341 18.2847 7.10391 18.8137 8.05304C18.5612 8.14366 18.3239 8.28329 18.1203 8.47491C17.9167 8.66641 17.7685 8.88979 17.672 9.12741ZM19.9005 11.6043C19.0403 11.6043 18.3431 10.948 18.3431 10.1384C18.3431 9.32891 19.0403 8.67266 19.9005 8.67266C20.7606 8.67266 21.4577 9.32891 21.4577 10.1384C21.4576 10.948 20.7605 11.6043 19.9005 11.6043Z" fill="#454545"/>
+                        <path d="M6.98737 8.00574C4.32887 8.00574 2.17358 10.0341 2.17358 12.5364C2.17358 15.0386 4.32887 17.0669 6.98737 17.0669C9.64588 17.0669 11.801 15.0385 11.801 12.5364C11.801 10.0342 9.64575 8.00574 6.98737 8.00574ZM5.14433 15.4287C4.76927 15.7817 4.41068 15.5466 4.03562 15.1936C3.66029 14.8404 3.4106 14.5029 3.78566 14.1499C4.01065 13.938 4.84033 13.3634 5.54941 13.0132C5.61701 13.1804 5.72127 13.3375 5.86444 13.4721C6.00735 13.6067 6.17416 13.705 6.35173 13.7686C5.97999 14.4359 5.36932 15.2167 5.14433 15.4287ZM6.98737 13.509C6.41655 13.509 5.95383 13.0736 5.95383 12.5364C5.95383 11.9991 6.41655 11.5637 6.98737 11.5637C7.55807 11.5637 8.02079 11.9991 8.02079 12.5364C8.02079 13.0735 7.55807 13.509 6.98737 13.509Z" fill="#454545"/>
+                        <path d="M19.8119 19.0235C17.1865 19.0235 14.8091 18.0087 13.0964 16.375H12.5074C11.2446 18.0049 9.20152 19.0669 6.89881 19.0669C5.87841 19.0669 4.90981 18.8568 4.03644 18.4829V26.6875C4.03644 27.5125 4.75363 28.1875 5.63019 28.1875H21.9661C22.8427 28.1875 23.5599 27.5125 23.5599 26.6875V18.2913C22.4103 18.7614 21.1431 19.0235 19.8119 19.0235Z" fill="#454545"/>
+                        </g>
+                        <defs>
+                        <clipPath id="clip0_9_2">
+                        <rect width="34" height="32" fill="white"/>
+                        </clipPath>
+                        </defs>
+                    </svg>
+                    <p class="pheader_phead_forlogo_logo_p">CineWave</p>
+                </div>
+            </div>
+            <div class="pheader_phead_forimg">
+                <img class="pheader_phead_forimg_img" src="./img/SMB2.png" alt="">
+            </div>
+            <div class="pheader_phead_forp">
+                <p class="pheader_phead_forp_p">Introducing a new movie!</p>
+            </div>
+            <div class="pheader_phead_forbtn">
+                <button class="pheader_phead_forbtn_btn">Purchase</button>
+            </div>
+        </header>
+    </div>
+    <div class="pmain">
+        <div class="pmain_block1">
+            <div class="pmain_block1_forp">
+                <p class="pmain_block1_forp_p">You can watch over 1000+ movies</p>
+            </div>
+            <div class="pmain_block1_forimg">
+                <img class="pmain_block1_forimg_img" src="./img/films3.png" alt="">
+            </div>
+            <div class="pmain_block1_forbtn">
+                <button class="pmain_block1_forbtn_btn">More</button>
+            </div>
+        </div>
+        <div class="pmain_block2">
+            <div class="pmain_block2_forp">
+                <p class="pmain_block2_forp_p">You can find any movie of your choice</p>
+            </div>
+            <div class="pmain_block2_forimg">
+                <img class="pmain_block2_forimg_img" src="./img/films4.png" alt="">
+            </div>
+        </div>
+    </div>
+    <footer class="pfooter">
+        <div class="pfooter_block1">
+            <div class="pfooter_block1_logo">
+                <svg width="34" height="32" viewBox="0 0 34 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_9_2)">
+                    <path d="M31.7078 14.023C31.313 14.023 30.903 14.1007 30.4889 14.2538L25.7462 16.0069C27.3609 14.5279 28.3665 12.4629 28.3665 10.18C28.3665 5.69454 24.4892 2.04529 19.7233 2.04529C15.5364 2.04529 12.0364 4.86204 11.2475 8.58766C10.1284 7.48591 8.55367 6.79754 6.81024 6.79754C3.42365 6.79754 0.668457 9.39066 0.668457 12.5782C0.668457 14.5673 1.74158 16.3249 3.37146 17.3653C3.2919 17.3949 3.21394 17.4293 3.14063 17.4737C2.76092 17.7038 2.53142 18.0997 2.53142 18.5247V26.7293C2.53142 28.2457 3.84215 29.4793 5.45329 29.4793H21.7892C23.4004 29.4793 24.7111 28.2457 24.7111 26.7293V23.5975C25.0292 23.8242 25.3742 24.0087 25.7192 24.1362L30.4892 25.8998C30.9031 26.0528 31.3131 26.1303 31.7078 26.1303C32.9592 26.1303 33.8673 25.3324 33.8673 24.233V15.9202C33.8672 14.8208 32.959 14.023 31.7078 14.023Z" fill="#D1D1D1"/>
+                    <path d="M32.7161 24.1913C32.7161 24.7862 32.0121 25.0125 31.1516 24.6945L26.3817 22.931C25.5212 22.613 24.8172 21.8658 24.8172 21.2712V18.7986C24.8172 18.2038 25.5212 17.4568 26.3817 17.1387L31.1516 15.3755C32.0121 15.0573 32.7161 15.2837 32.7161 15.8785V24.1913Z" fill="#454545"/>
+                    <path d="M19.9005 3.25366C15.8605 3.25366 12.5854 6.33616 12.5854 10.1384C12.5854 13.9405 15.8605 17.0235 19.9005 17.0235C23.9405 17.0235 27.2155 13.9407 27.2155 10.1384C27.2155 6.33604 23.9405 3.25366 19.9005 3.25366ZM17.672 9.12741C16.6637 8.62954 15.4837 7.81229 15.1636 7.51091C14.63 7.00866 14.9851 6.52879 15.5189 6.02654C16.0527 5.52416 16.5625 5.18991 17.0962 5.69216C17.4162 5.99341 18.2847 7.10391 18.8137 8.05304C18.5612 8.14366 18.3239 8.28329 18.1203 8.47491C17.9167 8.66641 17.7685 8.88979 17.672 9.12741ZM19.9005 11.6043C19.0403 11.6043 18.3431 10.948 18.3431 10.1384C18.3431 9.32891 19.0403 8.67266 19.9005 8.67266C20.7606 8.67266 21.4577 9.32891 21.4577 10.1384C21.4576 10.948 20.7605 11.6043 19.9005 11.6043Z" fill="#454545"/>
+                    <path d="M6.98737 8.00574C4.32887 8.00574 2.17358 10.0341 2.17358 12.5364C2.17358 15.0386 4.32887 17.0669 6.98737 17.0669C9.64588 17.0669 11.801 15.0385 11.801 12.5364C11.801 10.0342 9.64575 8.00574 6.98737 8.00574ZM5.14433 15.4287C4.76927 15.7817 4.41068 15.5466 4.03562 15.1936C3.66029 14.8404 3.4106 14.5029 3.78566 14.1499C4.01065 13.938 4.84033 13.3634 5.54941 13.0132C5.61701 13.1804 5.72127 13.3375 5.86444 13.4721C6.00735 13.6067 6.17416 13.705 6.35173 13.7686C5.97999 14.4359 5.36932 15.2167 5.14433 15.4287ZM6.98737 13.509C6.41655 13.509 5.95383 13.0736 5.95383 12.5364C5.95383 11.9991 6.41655 11.5637 6.98737 11.5637C7.55807 11.5637 8.02079 11.9991 8.02079 12.5364C8.02079 13.0735 7.55807 13.509 6.98737 13.509Z" fill="#454545"/>
+                    <path d="M19.8119 19.0235C17.1865 19.0235 14.8091 18.0087 13.0964 16.375H12.5074C11.2446 18.0049 9.20152 19.0669 6.89881 19.0669C5.87841 19.0669 4.90981 18.8568 4.03644 18.4829V26.6875C4.03644 27.5125 4.75363 28.1875 5.63019 28.1875H21.9661C22.8427 28.1875 23.5599 27.5125 23.5599 26.6875V18.2913C22.4103 18.7614 21.1431 19.0235 19.8119 19.0235Z" fill="#454545"/>
+                    </g>
+                    <defs>
+                    <clipPath id="clip0_9_2">
+                    <rect width="34" height="32" fill="white"/>
+                    </clipPath>
+                    </defs>
+                </svg>
+                <p class="pfooter_block1_logo_p">CineWave</p>
+            </div>
+            <p class="pfooter_block1_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisl nulla, pellentesque ut ornare ut, vulputate in dui. Fusce placerat elit lacus, ut iaculis dolor sollicitudin at. Sed imperdiet auctor tortor, eu venenatis odio consequat mollis</p>
         </div>
     </footer>
 </body>
