--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                        <a class="header_head_nav_ul_li_a" href="#">Schedule</a> 
                     </li>
                     <li class="header_head_nav_ul_li">
-                       <a class="header_head_nav_ul_li_a" href="#">Cinema</a>     
+                       <a class="header_head_nav_ul_li_a" href="./CineWave_cinema-main/index.html">Places</a>     
                     </li>
                 </ul>
             </nav>
