--- a/index.html
+++ b/index.html
@@ -55,22 +55,24 @@
                        <a class="header_head_nav_ul_li_a" href="#">Schedule</a> 
                     </li>
                     <li class="header_head_nav_ul_li">
-                       <a class="header_head_nav_ul_li_a" href="./CineWave_cinema-main/index.html">Places</a>     
+                       <a class="header_head_nav_ul_li_a" href="./Sergey/index.html">Places</a>     
                     </li>
                 </ul>
             </nav>
-            <button class="header_head_btn">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="18" viewBox="0 0 16 18" fill="none">
-                    <path d="M1 17C1 13.5636 4.13401 10.7778 8 10.7778C11.866 10.7778 15 13.5636 15 17M12 4.55556C12 6.51924 10.2091 8.11111 8 8.11111C5.79086 8.11111 4 6.51924 4 4.55556C4 2.59188 5.79086 1 8 1C10.2091 1 12 2.59188 12 4.55556Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </button>
+            <a href="./Denis/index.html">
+                <button class="header_head_btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="18" viewBox="0 0 16 18" fill="none">
+                        <path d="M1 17C1 13.5636 4.13401 10.7778 8 10.7778C11.866 10.7778 15 13.5636 15 17M12 4.55556C12 6.51924 10.2091 8.11111 8 8.11111C5.79086 8.11111 4 6.51924 4 4.55556C4 2.59188 5.79086 1 8 1C10.2091 1 12 2.59188 12 4.55556Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </button>
+            </a>
         </header>
         <div class="header_block1">
            <img class="header_block1_img" src="./img/The_Super_Mario_Bros 1.png" alt="The_Super_Mario_Bros_movie"> 
            <div class="header_block1_bl">
                 <p class="header_block1_bl_title">Introducing a new movie! </p>
                 <p class="header_block1_bl_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisl nulla, pellentesque ut ornare ut, vulputate in dui. Fusce placerat elit lacus, ut iaculis dolor sollicitudin at. Sed imperdiet auctor tortor, eu venenatis odio consequat mollis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisl nulla, pellentesque ut ornare ut, vulputate in dui. Fusce placerat elit lacus, ut iaculis dolor sollicitudin at. Sed imperdiet auctor tortor, eu venenatis odio consequat mollis</p>
-                <button class="header_block1_bl_btn">Purchase</button>
+                <button class="header_block1_bl_btn btn">Purchase</button>
            </div>
         </div>
     </div>
@@ -193,5 +195,6 @@
             <p class="pfooter_block1_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisl nulla, pellentesque ut ornare ut, vulputate in dui. Fusce placerat elit lacus, ut iaculis dolor sollicitudin at. Sed imperdiet auctor tortor, eu venenatis odio consequat mollis</p>
         </div>
     </footer>
+    <script src="./main.js"></script>
 </body>
 </html>
