--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <nav class="header_head_nav">
                 <ul class="header_head_nav_ul">
                     <li class="header_head_nav_ul_li">
-                       <a class="header_head_nav_ul_li_a" href="#">Films</a> 
+                       <a class="header_head_nav_ul_li_a" href="./Stas (No)/films.html">Films</a> 
                     </li>
                     <li class="header_head_nav_ul_li">
                        <a class="header_head_nav_ul_li_a" href="#">Tickets</a> 
@@ -85,7 +85,9 @@
                 <img class="main_block1_forimg_img" src="./img/films.png" alt="">
             </div>
             <div class="main_block1_forbtn">
-                <button class="main_block1_forbtn_btn">More</button>
+                <a href="./Stas (No)/films.html">
+                    <button class="main_block1_forbtn_btn">More</button>
+                </a>
             </div>
         </div>
         <div class="main_block2">
