--- a/Denis/index.html
+++ b/Denis/index.html
@@ -22,14 +22,16 @@
 <body>
     <div class="header">
         <div class="header_logo">
-            <img src="./img/cinema-alt-svgrepo-com 1.png" alt="logo">
+            <a href="../index.html">
+                <img src="./img/cinema-alt-svgrepo-com 1.png" alt="logo">
+            </a>
         </div>
         <div class="header_nav">
-            <a class="header_nav_text" href="">Films</a>
+            <a class="header_nav_text" href="../Stas (No)/films.html">Films</a>
             <a class="header_nav_text" href="">Tickets</a>
             <a class="header_nav_text" href="">New</a>
             <a class="header_nav_text" href="">Schedule</a>
-            <a class="header_nav_text" href="">Cinema</a>
+            <a class="header_nav_text" href="../Sergey/index.html">Cinema</a>
         </div>
         <div class="header_profile">
             <img class="header_profile_img" src="./img/Vector.png" alt="profile">
