--- a/Igor/purchase.html
+++ b/Igor/purchase.html
@@ -14,13 +14,15 @@
 </head>
 <body>
     <header class="header_menu">
-        <img class="header_menu_img1" src="./imges/logo.svg" alt="">
+        <a href="../index.html">
+            <img class="header_menu_img1" src="./imges/logo.svg" alt="">
+        </a>
         <nav class="header_menu_nav">
-            <a class="header_menu_nav_a" href="#">Film</a>
+            <a class="header_menu_nav_a" href="../Stas (No)/films.html">Film</a>
             <a class="header_menu_nav_a" href="#">Tickets</a>
             <a class="header_menu_nav_a" href="#">New</a>
             <a class="header_menu_nav_a" href="#">Schedule</a>
-            <a class="header_menu_nav_a" href="#">Cinema</a>
+            <a class="header_menu_nav_a" href="../Sergey/index.html">Cinema</a>
             <img class="justmenu" src="./imges/menu.png" alt="">
         </nav>
         <img class="header_menu_img2" src="./imges/user.svg" alt="">
