--- a/Sergey/index.html
+++ b/Sergey/index.html
@@ -21,16 +21,18 @@
 </head>
 <body>
     <div class="head-cinema">
-        <div class="head-cinema_logo">
-            <img src="./img/cinema-alt-svgrepo-com 1.svg" alt="">
-            <p class="head-cinema_logo_title">CineWave</p>
-        </div>
+        <a href="../index.html">
+            <div class="head-cinema_logo">
+                <img src="./img/cinema-alt-svgrepo-com 1.svg" alt="">
+                <p class="head-cinema_logo_title">CineWave</p>
+            </div>
+        </a>
         <nav class="head-cinema_nav">
-            <a class="head-cinema_nav_item" href="#">Films</a>
+            <a class="head-cinema_nav_item" href="../Stas (No)/films.html">Films</a>
             <a class="head-cinema_nav_item" href="#">Tickets</a>
             <a class="head-cinema_nav_item" href="#">New</a>
             <a class="head-cinema_nav_item" href="#">Schedule</a>
-            <a class="head-cinema_nav_item" href="#">Places</a>
+            <a class="head-cinema_nav_item" href="../Sergey/index.html">Places</a>
         </nav>
         <img class="head-cinema_img" src="./img/Vector.svg" alt="">
     </div>
